[gd_scene load_steps=19 format=3 uid="uid://dbghsxudvxi5i"]

[ext_resource type="Script" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/SelectResearcherScreen/SelectResearcherScreen.gd" id="1_46ons"]
[ext_resource type="LabelSettings" uid="uid://chq5rx4ad5jlu" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/MetricsContainer/parts/label_medium.tres" id="2_7k740"]
[ext_resource type="Material" uid="uid://c20bb2a0jbecw" path="res://Shader/StarPlasma/template.tres" id="2_tgxgy"]
[ext_resource type="PackedScene" uid="uid://dhkyb6t56c2fk" path="res://UI/Buttons/KeyBtn/KeyBtn.tscn" id="3_xvjka"]
[ext_resource type="LabelSettings" uid="uid://bhvjm3opd1txx" path="res://Fonts/game/label_small.tres" id="4_2l2gt"]
[ext_resource type="PackedScene" uid="uid://d1melr1fetrom" path="res://Scenes/TrainingProgram/parts/Cards/TRAIT/TraitCard.tscn" id="5_jtc7n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y7xi8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pwxwe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q1c61"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.796078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yslqg"]
bg_color = Color(0.455201, 0.00200917, 0.712752, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hd8mb"]
bg_color = Color(0.52438, 0.0871933, 4.81308e-08, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jlsg8"]
bg_color = Color(0, 0.529412, 0.278431, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d3sg2"]
bg_color = Color(0, 0.529412, 0.278431, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y1vge"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_rdsf8"]
color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4i6ts"]
bg_color = Color(0.316, 0.249, 0.37, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hs1xl"]
bg_color = Color(0.316, 0.249, 0.37, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1v45f"]
bg_color = Color(0.316, 0.249, 0.37, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="SelectResearcherScreen" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_y7xi8")
script = ExtResource("1_46ons")

[node name="ColorRectBG" type="ColorRect" parent="."]
material = ExtResource("2_tgxgy")
layout_mode = 2
color = Color(0.158472, 0.158472, 0.158472, 0.333333)

[node name="ResearcherControl" type="Control" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="ResearcherControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_pwxwe")

[node name="MarginContainer" type="MarginContainer" parent="ResearcherControl/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ResearcherControl/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="VBoxContainer" type="VBoxContainer" parent="ResearcherControl/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ResearcherControl/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "AVAILABLE HIRES"
label_settings = ExtResource("2_7k740")
horizontal_alignment = 1

[node name="ResearcherList" type="HBoxContainer" parent="ResearcherControl/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="BtnControl" type="Control" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BtnControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BtnControl/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="BtnControl/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_q1c61")

[node name="MarginContainer" type="MarginContainer" parent="BtnControl/MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="BtnControl/MarginContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="LeftSideBtnList" type="HBoxContainer" parent="BtnControl/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_constants/separation = 10

[node name="Details" parent="BtnControl/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/LeftSideBtnList" instance=ExtResource("3_xvjka")]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_yslqg")
title = "MORE DETAILS"
assigned_key = "R"
icon = 23
panel_color = Color(0.455201, 0.00200917, 0.712752, 1)

[node name="RightSideBtnList" type="HBoxContainer" parent="BtnControl/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8

[node name="BackBtn" parent="BtnControl/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/RightSideBtnList" instance=ExtResource("3_xvjka")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hd8mb")
title = "BACK"
assigned_key = "B"
icon = 16
panel_color = Color(0.52438, 0.0871933, 4.81308e-08, 1)

[node name="SelectResearcher" parent="BtnControl/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/RightSideBtnList" instance=ExtResource("3_xvjka")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jlsg8")
title = "SELECT"
assigned_key = "E"
icon = 10
panel_color = Color(0, 0.529412, 0.278431, 1)

[node name="ConfirmResearchers" parent="BtnControl/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/RightSideBtnList" instance=ExtResource("3_xvjka")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d3sg2")
title = "FINALIZE"
assigned_key = "E"
icon = 10
panel_color = Color(0, 0.529412, 0.278431, 1)

[node name="TraitControl" type="Control" parent="."]
layout_mode = 2

[node name="TraitPanel" type="PanelContainer" parent="TraitControl"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_y1vge")

[node name="MarginContainer" type="MarginContainer" parent="TraitControl/TraitPanel"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TraitControl/TraitPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 20

[node name="TraitContainer" type="VBoxContainer" parent="TraitControl/TraitPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TraitControl/TraitPanel/MarginContainer/VBoxContainer/TraitContainer"]
layout_mode = 2
text = "TRAITS"
label_settings = ExtResource("4_2l2gt")
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="TraitControl/TraitPanel/MarginContainer/VBoxContainer/TraitContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_rdsf8")

[node name="TraitList" type="VBoxContainer" parent="TraitControl/TraitPanel/MarginContainer/VBoxContainer/TraitContainer"]
layout_mode = 2

[node name="TraitCard" parent="TraitControl/TraitPanel/MarginContainer/VBoxContainer/TraitContainer/TraitList" instance=ExtResource("5_jtc7n")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4i6ts")

[node name="SynergyContainer" type="VBoxContainer" parent="TraitControl/TraitPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="TraitControl/TraitPanel/MarginContainer/VBoxContainer/SynergyContainer"]
layout_mode = 2
text = "TRAIT SYNERGY"
label_settings = ExtResource("4_2l2gt")
horizontal_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="TraitControl/TraitPanel/MarginContainer/VBoxContainer/SynergyContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_rdsf8")

[node name="SynergyTraitList" type="VBoxContainer" parent="TraitControl/TraitPanel/MarginContainer/VBoxContainer/SynergyContainer"]
layout_mode = 2

[node name="TraitCard" parent="TraitControl/TraitPanel/MarginContainer/VBoxContainer/SynergyContainer/SynergyTraitList" instance=ExtResource("5_jtc7n")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hs1xl")

[node name="TraitCard2" parent="TraitControl/TraitPanel/MarginContainer/VBoxContainer/SynergyContainer/SynergyTraitList" instance=ExtResource("5_jtc7n")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1v45f")
